# freight-bid-schema-normalizer

./: .funcignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.streamlit  README.md  SECURITY.md  function_app.py  local.settings.template.json  pyproject.toml  requirements-streamlit.txt  requirements.txt  streamlit_app.py
.copilot/: TODO.md  TODO_template.md  copilot_instructions.md  startup_procedure.md
.github/workflows/: cd.yml  ci.yml
docs/: implementation_plan.md  schema_cache_enhancement_plan.md  software_spec.md  streamlit_uiux_plan.md
examples/inputs/: Customer 3 file .xlsx  Input 4.xlsx  Input 5.xlsx  Input 6.xlsx  Input 7.xlsx  Input 8.xlsx  Input 9 - Synthetic Notes Test.xlsx
examples/outputs/: Output 4.xlsx  Output 5.xlsx  Output 6.xlsx  Output 7.xlsx  Output 8.xlsx
infra/: deployment_report.md  ghcp_deploy_kickoff.md  main.bicep  main.dev.bicepparam  main.dev.json  main.json  main.prod.bicepparam  main.prod.json  main.test.bicepparam  main.test.json  rbac_assignments.md
infra/modules/: containerWorker.bicep  roles.bicep  (+9 more)
schema/: output_template.xlsx
scripts/: approve-schema-cache-entry.py  backfill-notes-json.py  backfill-schema-lookup.py  deploy-foundry-agent.py  deploy-postprocess-agent.py  restart-local.ps1
tests/: test_artifact_store.py  test_artifact_store_blob.py  test_normalization_service.py  test_output_writer.py  test_pipeline_runner.py  test_planning_service.py  test_sandbox_executor.py  test_script_policy.py  test_sheet_classifier.py  test_template_loader.py  test_validation_service.py  test_workbook_profiler.py
(+25 files in other folders)
